--- a/imagersite/templates/base.jinja2
+++ b/imagersite/templates/base.jinja2
@@ -8,11 +8,23 @@
 
 <html>
 <head>
-    <title>This is in the title!</title>
+    <title>Imager</title>
 </head>
+<nav class='container'>
+    <a href="{% url 'homepage' %}">home</a>
+    <a href="{% url 'homepage' %}">login</a>
+    <a href="{% url 'homepage' %}">home</a>
+    <a href="{% url 'homepage' %}">home</a>
+    <a href="{% url 'homepage' %}">home</a>
+
+</nav>
 <body>
-    <h1>This is an h1!</h1>
-    <p>This is in ffthe body!</p>
+    <h1>They say a picture is worth a thousand words...</h1>
+    <h3>Sign up now and get millions of words, right at your fingertips.</h3>
+    <h4>Thats a lot of pictures!</h4>
+    <div>
+    <img src="https://www.wonderplugin.com/wp-content/plugins/wonderplugin-lightbox/images/demo-image0.jpg">
+    </div>
 </body>
-<footer>This is in the footer!</footer>
+<footer class="col-md-2 col-md-offset-5">&copy; JTNTJ, inc.</footer>
 </html>
