--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -5,15 +5,20 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     {% bootstrap_messages %}
+
     <title>Imager</title>
 </head>
-<h1><strong>Imager </strong><small>Share Moments, Share Life</small></h1>
+<h1><strong>Imager </strong><small>Share Moments, Share Life<br>
+</small></h1>Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!
 <nav class='container'>
     <a href="{% url 'homepage' %}">home</a>
+    {% if user.is_authenticated %}
+    <a href="{% url 'auth_logout' %}?next=/">logout</a>
+    {% else %}
     <a href="{% url 'auth_login' %}">login</a>
-    <a href="{% url 'auth_register' %}">register</a>
-    <a href="{% url 'homepage' %}">home</a>
-    <a href="{% url 'homepage' %}">home</a>
+    <a href="{% url 'registration_register' %}">register</a>
+    {% endif %}
+
 </nav><br><br>
 {% block content %}
 {% endblock %}
