pics picked unpredictably

--- a/imagersite/templates/home.html
+++ b/imagersite/templates/home.html
@@ -3,8 +3,8 @@
 
 <body>
     <h3>Sign up now and change the world.</h3>
-    <div>
-    <img src="https://www.wonderplugin.com/wp-content/plugins/wonderplugin-lightbox/images/demo-image0.jpg">
+    <div class="img-responsive center-block" >
+        <img class="img-responsive center-block" src="{{ MEDIA_ROOT }}{{ pic_url }}">
     </div>
 </body>
 
