--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -9,8 +9,9 @@
     <title>Imager</title>
 </head>
 <h1><strong>Imager </strong><small>Share Moments, Share Life<br>
-</small></h1>Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!
-<nav class='container'>
+</small></h1>
+<nav>
+    Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
@@ -22,5 +23,5 @@
 </nav><br><br>
 {% block content %}
 {% endblock %}
-<footer class="col-md-2 col-md-offset-5">&copy; 2015 JTNTJ, inc.</footer>
+<footer class="text-center">&copy; 2015 JTNTJ, inc.</footer>
 </html>
