--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -14,6 +14,7 @@
     Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
+    <a href="/profile/{{ user.username }}">profile</a>
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
     {% else %}
     <a href="{% url 'auth_login' %}">login</a>
