--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -15,6 +15,7 @@
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
     <a href="/profile/{{ user.username }}">profile</a>
+    <a href="/photos/{{ user.username }}">photos</a>
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
     {% else %}
     <a href="{% url 'auth_login' %}">login</a>
