--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -14,7 +14,7 @@
     Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
-    <a href="/profile/{{ user.username }}">profile</a>
+    <a href="/profile/">profile</a>
     <a href="/photos/{{ user.username }}">photos</a>
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
     {% else %}
