album, photo views

--- a/imagersite/templates/album.html
+++ b/imagersite/templates/album.html
@@ -1,19 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-{% load thumbnail %}
 
 <body>
-<h1>{{ username }}'s Photos</h1>
-    {% for photo in user.photos %}
-    <div class="img-responsive col-md-6">
-    <h4 class='text-center'>{{ photo.title }}</h2>
-    <h6 class='text-center'>Uploaded on {{ photo.date_uploaded }} -- {{photo.privacy }}</h4>
-    {% thumbnail {{ photo }} "100x100" crop="center" as im %}
-    <p>afdassaadddddddddddddddddddddddddddddddddddddddddddddfasd</p>
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-    {% endthumbnail %}
-    <p class='text-center'>{{ photo.description }}</p>
-        <img class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}">
+<h1>{{ album.title }}</h1>
+    <div class="img-responsive col-md-6"><br><br>
+    <h6 class='text-center'>Uploaded on {{ album.date_uploaded }} -- {{album.privacy }}</h6>
+    <pre class='text-center'>{{ album.description }}</pre>
+    </div>
+
+    {% for photo in album.photos.all %}
+    <div class="img-responsive col-md-6"><br><br>
+        <h4 class='text-center'>{{ photo.title }}</h4>
+        <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px;' class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
 </body>
