--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -15,7 +15,7 @@
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
     <a href="/profile/">profile</a>
-    <a href="/photos/{{ user.username }}">photos</a>
+    <a href="/images/library/">library</a>
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
     {% else %}
     <a href="{% url 'auth_login' %}">login</a>
@@ -25,5 +25,5 @@
 </nav><br><br>
 {% block content %}
 {% endblock %}
-<footer class="text-center">&copy; 2015 JTNTJ, inc.</footer>
+<footer style="clear:both;" class="text-center">&copy; 2015 JTNTJ, inc.</footer>
 </html>
