--- a/imagersite/templates/library.html
+++ b/imagersite/templates/library.html
@@ -3,19 +3,20 @@
 {% load thumbnail %}
 
 <body>
-<h1>{{ username }}'s Photos</h1>
-    {% for photo in user.photos %}
-    <div class="img-responsive col-md-6">
-    <h4 class='text-center'>{{ photo.title }}</h2>
-    <h6 class='text-center'>Uploaded on {{ photo.date_uploaded }} -- {{photo.privacy }}</h4>
-    {% thumbnail {{ photo }} "100x100" crop="center" as im %}
-    <p>afdassaadddddddddddddddddddddddddddddddddddddddddddddfasd</p>
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-    {% endthumbnail %}
-    <p class='text-center'>{{ photo.description }}</p>
-        <img class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}">
+<h1>{{ user.username }}'s Albums</h1>
+    {% for album in user.albums.all %}
+    <div class="img-responsive col-md-6"><br><br>
+        <h4 class='text-center'>{{ album.title }}</h2>
+        <a href='/images/albums/{{ album.id }}'><img style='box-shadow: 10px 15px 15px;' class="img-responsive" src="{{ MEDIA_URL }}{{ album.cover.file }}"></a>
+    </div>
+    {% endfor %}
+<div class="img-responsive col-md-6"><div>
+    <h1>{{ user.username }}'s Photos</h1>
+    {% for photo in user.photos.all %}
+    <div class="img-responsive col-md-6"><br><br>
+        <h4 class='text-center'>{{ photo.title }}</h4>
+        <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px;' class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
 </body>
-
 {% endblock %}
