--- a/imagersite/templates/photo.html
+++ b/imagersite/templates/photo.html
@@ -3,7 +3,7 @@
 
 <body>
 <h1>{{ photo.title }}</h1>
-    <div class="img-responsive col-md-6">
+    <div class="img-responsive">
     <h6 class='text-center'>Uploaded on {{ photo.date_uploaded }} -- {{photo.privacy }}</h4>
     <p class='text-center'>{{ photo.description }}</p>
         <img class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}">
