--- a/imagersite/templates/profile.html
+++ b/imagersite/templates/profile.html
@@ -2,9 +2,10 @@
 {% block content %}
 
 <body>
-<h3>You have changed the world. Let us count the ways.</h3>
-<a href="/profile/{{ user.username }}"><h1 class="col-md-6"><strong style="font-size:200px;">{{ user.albums.all|length }}</strong><br>Albums</h1></a>
-<a href="/profile/{{ user.username }}"><h1 class="col-md-6"><strong style="font-size:200px;">{{ user.photos.all|length }}</strong><br>Photos</h1></a>
+<h1><big>Hello, {{ user.username }}. You joined us on {{ user.date_joined|date:"l, F dS, Y." }}</big></h1>
+<h3>Looks like you need to upload more photos!</h3>
+<a href="{% url 'library' %}"><h1 class="col-md-6"><strong style="font-size:200px;">{{ user.albums.all|length }}</strong><br>Albums</h1></a>
+<a href="{% url 'library' %}"><h1 class="col-md-6"><strong style="font-size:200px;">{{ user.photos.all|length }}</strong><br>Photos</h1></a>
 </body>
 
 {% endblock %}
