--- a/imagersite/templates/library.html
+++ b/imagersite/templates/library.html
@@ -1,22 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-{% load thumbnail %}
 
-<body>
 <h1>{{ user.username }}'s Albums</h1>
-    {% for album in user.albums.all %}
-    <div class="img-responsive col-md-6"><br><br>
-        <h4 class='text-center'>{{ album.title }}</h2>
-        <a href='/images/albums/{{ album.id }}'><img style='box-shadow: 10px 15px 15px;' class="img-responsive" src="{{ MEDIA_URL }}{{ album.cover.file }}"></a>
-    </div>
-    {% endfor %}
-<div class="img-responsive col-md-6"><div>
-    <h1>{{ user.username }}'s Photos</h1>
+<div class="container">
+     {% for album in user.albums.all %}
+        <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
+        <h4 class='text-center'>{{ album.title }}</h4>
+        <a href='/images/albums/{{ album.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ album.cover.file }}"></a>
+        </div>
+      {% endfor %}
+</div>
+<h1 class="divider">{{ user.username }}'s Photos</h1>
+<div class="container">
     {% for photo in user.photos.all %}
-    <div class="img-responsive col-md-6"><br><br>
+    <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6"><br><br>
         <h4 class='text-center'>{{ photo.title }}</h4>
-        <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px;' class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
+        <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
-</body>
+</div>
+
 {% endblock %}
