moved files around

--- a/imagersite/imager_images/templates/album.html
+++ b/imagersite/imager_images/templates/album.html
@@ -3,7 +3,7 @@
 
 <body>
 <h1>{{ album.title }}</h1>
-    <div class="img-responsive col-md-6"><br><br>
+    <div class="img-responsive"><br><br>
     <h6 class='text-center'>Uploaded on {{ album.date_uploaded }} -- {{album.privacy }}</h6>
     <pre class='text-center'>{{ album.description }}</pre>
     </div>
