--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -14,14 +14,13 @@
     Welcome, {% if user.is_authenticated %}{{ user }}{% else %}Guest{% endif %}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="{% url 'homepage' %}">home</a>
     {% if user.is_authenticated %}
-    <a href="/profile/">profile</a>
-    <a href="/images/library/">library</a>
+    <a href="{% url 'profile' %}">profile</a>
+    <a href="{% url 'library' %}">library</a>
     <a href="{% url 'auth_logout' %}?next=/">logout</a>
     {% else %}
     <a href="{% url 'auth_login' %}">login</a>
     <a href="{% url 'registration_register' %}">register</a>
     {% endif %}
-
 </nav><br><br>
 {% block content %}
 {% endblock %}
