--- a/imagersite/imager_images/templates/library.html
+++ b/imagersite/imager_images/templates/library.html
@@ -9,6 +9,10 @@
         <a href='/images/albums/{{ album.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ album.cover.file }}"></a>
         </div>
       {% endfor %}
+      <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
+        <h4 class='text-center'>Add New</h4>
+        <a href="{% url 'add_album' %}"><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}add_album.png"></a>
+        </div>
 </div>
 <h1 class="divider">{{ user.username }}'s Photos</h1>
 <div class="container">
@@ -18,6 +22,10 @@
         <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
+    <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6"><br><br>
+        <h4 class='text-center'>Add New</h4>
+        <a href="{% url 'add_photo' %}"><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}add_photo.png"></a>
+    </div>
 </div>
 
 {% endblock %}
