--- a/imagersite/imager_images/templates/add_album.html
+++ b/imagersite/imager_images/templates/add_album.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="{% url 'add_album' %}" method="post">
+<form action="{% url 'add_album' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Add" />
