--- a/imagersite/imager_images/templates/add_photo.html
+++ b/imagersite/imager_images/templates/add_photo.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-Done.
+
+<form action="{% url 'add_photo' %}" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Add" />
+</form>
+
 {% endblock %}
