--- a/imagersite/imager_images/templates/edit_album.html
+++ b/imagersite/imager_images/templates/edit_album.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="{% url 'edit_album' album_id %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'edit_album' album_id %}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Save"/>
