Tests for Library done

--- a/imagersite/imager_images/templates/library.html
+++ b/imagersite/imager_images/templates/library.html
@@ -8,7 +8,12 @@
         <h4 class='text-center'>{{ album.title }}</h4>
         <a href='/images/albums/{{ album.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ album.cover.file }}"></a>
         </div>
-      {% endfor %}
+        {% if album.cover.file %}
+            src="{{ MEDIA_URL }}{{ album.cover.file }}">
+        {% else %}
+            src="{{ MEDIA_URL }}seattle.jpg">
+        {% endif %}
+     {% endfor %}
 </div>
 <h1 class="divider">{{ user.username }}'s Photos</h1>
 <div class="container">
