--- a/imagersite/imager_profile/templates/edit_profile.html
+++ b/imagersite/imager_profile/templates/edit_profile.html
@@ -3,7 +3,8 @@
 
 <form action="{% url 'edit_profile' %}" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ profile_form }}
+    {{ user_form }}
     <input type="submit" value="Save"/>
 </form>
 
