--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+<script type="text/javascript" src="//algorithmia.com/v1/clients/js/algorithmia-0.2.0.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert-dev.js"></script>
+
  <script src="{{ MEDIA_URL }}facetagger.js" type="text/javascript"></script>
  <style src="{{ MEDIA_URL }}facetagger.css" type="text/css"></style>
 <body>
@@ -18,7 +23,8 @@
     <input type="submit" value="Detect Faces" />
 
     <script type="text/javascript">
-        FaceTagger.init({
+         $(document).ready(function(){
+            FaceTagger.init({
                 container: "#photo-container",
                 labelUrl: "{{photo.id}}/faces",
                 csrf: "{{ csrf_token }}",
@@ -37,7 +43,7 @@
                 height: {{f.height}}
             };
             FaceTagger.make(face);
-        {% endfor %}
+        {% endfor %}});
     </script>
 
 </form>
