--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -1,6 +1,59 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<style>
+#photo-container
+{
+    position: relative;
+    text-align: center;
+}
+
+#photo-container img
+{
+    width: 600px;
+}
+
+.facelabel
+{
+    position: absolute;
+    cursor: pointer;
+    text-align: left;
+}
+
+.facelabel .border
+{
+    border: solid 4px #FFFF00;
+}
+
+.facelabel .name
+{
+    display: inline-block;
+    margin-top: 5px;
+    font-size: 12px;
+    padding: 6px;
+    color: #444;
+    background-color: #FFFF00
+}
+
+.delete-btn
+{
+    position: absolute;
+    right: 0px;
+    bottom: -20px;
+    font-size: 12px;
+}
+</style>
+
+
+
+
+
+
+
+
+
+<style rel="stylesheet" src="{{ MEDIA_URL }}facetagger.css" type="text/css"></style>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 <script type="text/javascript" src="//algorithmia.com/v1/clients/js/algorithmia-0.2.0.js"></script>
@@ -15,7 +68,7 @@
     <pre class='text-center'>{{ photo.description }}</pre>
     </div>
     <container id='photo-container'>
-        <img class="img-responsive" src="{{ MEDIA_URL }}{{ photo.file }}">
+        <img src="{{ MEDIA_URL }}{{ photo.file }}">
     </container>
     </div>
     <form action="{% url 'photo' photo.id %}" method="post">
@@ -28,8 +81,8 @@
                 container: "#photo-container",
                 labelUrl: "{{photo.id}}/faces",
                 csrf: "{{ csrf_token }}",
-                originalWidth: 1024,
-                originalHeight: 1024,
+                originalWidth: 852,
+                originalHeight: 480,
                 newWidth: $("#photo-container img").width(),
                 newHeight: $("#photo-container img").height()
             });
@@ -45,7 +98,6 @@
             FaceTagger.make(face);
         {% endfor %}});
     </script>
-
 </form>
 </body>
 
