--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -12,6 +12,7 @@
 #photo-container img
 {
     width: 600px;
+    float: left;
 }
 
 .facelabel
@@ -51,25 +52,21 @@
 
 
 
-
-
-<style rel="stylesheet" src="{{ MEDIA_URL }}facetagger.css" type="text/css"></style>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 <script type="text/javascript" src="//algorithmia.com/v1/clients/js/algorithmia-0.2.0.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert-dev.js"></script>
 
  <script src="{{ MEDIA_URL }}facetagger.js" type="text/javascript"></script>
- <style src="{{ MEDIA_URL }}facetagger.css" type="text/css"></style>
 <body>
 <h1>{{ photo.title }}</h1>
-    <div class="img-responsive">
+    <div >
     <h6 class='text-center'>Uploaded on {{ photo.date_uploaded }} -- {{photo.privacy }}</h6>
     <pre class='text-center'>{{ photo.description }}</pre>
     </div>
-    <container id='photo-container'>
+    <div id='photo-container'>
         <img src="{{ MEDIA_URL }}{{ photo.file }}">
-    </container>
+    </div>
     </div>
     <form action="{% url 'photo' photo.id %}" method="post">
     {% csrf_token %}
