--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
+    {% load bootstrap3 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    {% bootstrap_messages %}
 
     <title>Imager</title>
 </head>
