--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -6,8 +7,8 @@
 <script type="text/javascript" src="//algorithmia.com/v1/clients/js/algorithmia-0.2.0.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert-dev.js"></script>
 
- <script src="{{ MEDIA_URL }}facetagger.js" type="text/javascript"></script>
- <style src="{{ MEDIA_URL }}facetagger.css" type="text/css"></style>
+<script src="{% static "imager_images/facetagger.js" %}"  type="text/javascript"></script>
+<link rel='stylesheet' type='text/css' href="{% static "imager_images/facetagger.css" %}"/>
 <body>
 <h1>{{ photo.title }}</h1>
     <div class="img-responsive">
