--- a/imagersite/templates/base.html
+++ b/imagersite/templates/base.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    {% load bootstrap3 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% bootstrap_messages %}
 
-    <title>Imager</title>
+<head>
+        {% load bootstrap3 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
+        {% bootstrap_messages %}
+
+        <title>Imager</title>
+    {% block head %}
+    {% endblock %}
 </head>
+
 <h1><strong>Imager </strong><small>Share Moments, Share Life<br>
 </small></h1>
 <nav>
