--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
+{% load leaflet_tags %}
 {% load staticfiles %}
+
+{% block head %}
+    {% leaflet_js %}
+    {% leaflet_css %}
+{% endblock %}
 
 {% block content %}
 
@@ -53,6 +59,18 @@
         {% endfor %}});
     </script>
 </form>
+    {% leaflet_map "main" callback="main_map_init" %}
+    <script type="text/javascript">
+        function main_map_init (map, options) {
+
+            var dataurl = '{% url "data" %}';
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+            // Add GeoJSON layer
+            L.geoJson(data).addTo(map);
+            });
+        }
+    </script>
 </body>
 
 {% endblock %}
