--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -63,7 +63,7 @@
     <script type="text/javascript">
         function main_map_init (map, options) {
 
-            var dataurl = '{% url "data" %}';
+            var dataurl = '{% url "data" photo.id %}';
             // Download GeoJSON via Ajax
             $.getJSON(dataurl, function (data) {
             // Add GeoJSON layer
