--- a/imagersite/imager_images/templates/album.html
+++ b/imagersite/imager_images/templates/album.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
+{% load leaflet_tags %}
+{% load staticfiles %}
+
+{% block head %}
+    {% leaflet_js %}
+    {% leaflet_css %}
+{% endblock %}
+
 {% block content %}
 
 <body>
@@ -7,6 +15,22 @@
     <div class="img-responsive"><br><br>
     <h6 class='text-center'>Uploaded on {{ album.date_uploaded }} -- {{album.privacy }}</h6>
     <pre class='text-center'>{{ album.description }}</pre>
+
+    {% leaflet_map "main" callback="main_map_init" %}
+
+    <script type="text/javascript">
+        function main_map_init (map, options) {
+
+            var dataurl = '{% url "a_geodata" album.id %}';
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+            // Add GeoJSON layer
+            L.geoJson(data).addTo(map);
+            });
+        }
+    </script>
+
+
     </div>
 
     {% for photo in album.photos.all %}
@@ -15,6 +39,7 @@
         <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
+
 
 </body>
 
