--- a/imagersite/imager_images/templates/photo.html
+++ b/imagersite/imager_images/templates/photo.html
@@ -15,13 +15,26 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.0.1/sweetalert-dev.js"></script>
 <script src="{% static "imager_images/facetagger.js" %}"  type="text/javascript"></script>
 <link rel='stylesheet' type='text/css' href="{% static "imager_images/facetagger.css" %}"/>
-
 <body>
 <h1>{{ photo.title }}</h1>
     <div >
     <h6 class='text-center'>Uploaded on {{ photo.date_uploaded }} -- {{photo.privacy }}</h6>
     <pre class='text-center'>{{ photo.description }}</pre>
     </div>
+
+    {% leaflet_map "main" callback="main_map_init" %}
+    <script type="text/javascript">
+        function main_map_init (map, options) {
+
+            var dataurl = '{% url "p_geodata" photo.id %}';
+            // Download GeoJSON via Ajax
+            $.getJSON(dataurl, function (data) {
+            // Add GeoJSON layer
+            L.geoJson(data).addTo(map);
+            });
+        }
+    </script>
+
     <div id='photo-container'>
         <img class="img-responsive" id="image" src="{{ MEDIA_URL }}{{ photo.file }}">
     </div>
@@ -59,18 +72,7 @@
         {% endfor %}});
     </script>
 </form>
-    {% leaflet_map "main" callback="main_map_init" %}
-    <script type="text/javascript">
-        function main_map_init (map, options) {
 
-            var dataurl = '{% url "data" photo.id %}';
-            // Download GeoJSON via Ajax
-            $.getJSON(dataurl, function (data) {
-            // Add GeoJSON layer
-            L.geoJson(data).addTo(map);
-            });
-        }
-    </script>
 </body>
 
 {% endblock %}
