fix static link on home

--- a/imagersite/templates/home.html
+++ b/imagersite/templates/home.html
@@ -10,7 +10,7 @@
     {% endif %}
 </h3>
     <div class="img-responsive center-block">
-        <img class="img-responsive center-block" src="{{ MEDIA_URL }}{{ pic_url }}">
+        <img class="img-responsive center-block" src="{% static 'imager_images/demo.jpg' %}">
     </div>
 </body>
 
