--- a/imagersite/templates/home.html
+++ b/imagersite/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% load staticfiles %}
 
 <body>
 <h3>
@@ -10,7 +11,13 @@
     {% endif %}
 </h3>
     <div class="img-responsive center-block">
-        <img class="img-responsive center-block" src="{% static 'imager_images/demo.jpg' %}">
+        <img class="img-responsive center-block"
+        {% if pic_url %}
+        src="{{ MEDIA_URL }}{{ pic_url }}"
+        {% else %}
+        src="{{ STATIC_URL }}demo.jpg"
+        {% endif %}
+        >
     </div>
 </body>
 
