--- a/imagersite/imager_images/templates/album.html
+++ b/imagersite/imager_images/templates/album.html
@@ -14,7 +14,7 @@
 <h1>{{ album.title }}</h1>
 <a href="{% url 'edit_album' album.id %}">Edit</a>
     <div class="img-responsive"><br><br>
-    <h6 class='text-center'>Uploaded on {{ album.date_uploaded }} -- {{album.privacy }}</h6>
+    <h6 class='text-center'>Uploaded on {{ album.date_uploaded }} -- {{ album.privacy }}</h6>
     <pre class='text-center'>{{ album.description }}</pre>
 
 
@@ -36,7 +36,7 @@
     {% for photo in album.photos.all %}
     <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6"><br><br>
         <h4 class='text-center'>{{ photo.title }}</h4>
-        <a href='/images/photos/{{ photo.id }}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
+        <a href='{% url 'photo' photo.id %}'><img style='box-shadow: 10px 15px 15px; width: auto; height: 160px;' class="thumbnail" src="{{ MEDIA_URL }}{{ photo.file }}"></a>
     </div>
     {% endfor %}
 
